--- a/content/forgero-compat/src/main/resources/data/forgero/packs/ad-astra/package.json
+++ b/content/forgero-compat/src/main/resources/data/forgero/packs/ad-astra/package.json
@@ -2,7 +2,7 @@
   "name": "ad_astra-compat",
   "resource_type": "PACKAGE",
   "priority": 5,
-  "namespace": "minecraft",
+  "namespace": "forgero",
   "dependencies": [
     "minecraft",
     "forgero",
