--- a/content/forgero-compat/src/main/resources/data/forgero/packs/regions_unexplored/package.json
+++ b/content/forgero-compat/src/main/resources/data/forgero/packs/regions_unexplored/package.json
@@ -2,7 +2,7 @@
   "name": "regions_unexplored-compat",
   "resource_type": "PACKAGE",
   "priority": 5,
-  "namespace": "minecraft",
+  "namespace": "forgero",
   "dependencies": [
     "minecraft",
     "forgero",
