--- a/content/forgero-compat/src/main/resources/data/forgero/packs/vinery/package.json
+++ b/content/forgero-compat/src/main/resources/data/forgero/packs/vinery/package.json
@@ -2,7 +2,7 @@
   "name": "vinery-compat",
   "resource_type": "PACKAGE",
   "priority": 4,
-  "namespace": "vinery",
+  "namespace": "forgero",
   "dependencies": [
     "minecraft",
     "forgero",
