--- a/content/forgero-compat/src/main/resources/data/forgero/packs/naturalist/package.json
+++ b/content/forgero-compat/src/main/resources/data/forgero/packs/naturalist/package.json
@@ -2,7 +2,7 @@
   "name": "naturalist-materials",
   "resource_type": "PACKAGE",
   "priority": 4,
-  "namespace": "naturalist",
+  "namespace": "forgero",
   "dependencies": [
     "minecraft",
     "forgero",
