--- a/content/forgero-compat/src/main/resources/data/forgero/packs/variants_sticks/package.json
+++ b/content/forgero-compat/src/main/resources/data/forgero/packs/variants_sticks/package.json
@@ -2,7 +2,7 @@
   "name": "sticks_and_stuff",
   "resource_type": "PACKAGE",
   "priority": 4,
-  "namespace": "vsas",
+  "namespace": "forgero",
   "dependencies": [
     "minecraft",
     "forgero",
