--- a/content/forgero-extended/src/main/resources/data/forgero/packs/forgero-spear-types/package.json
+++ b/content/forgero-extended/src/main/resources/data/forgero/packs/forgero-spear-types/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "forgero-spear",
+  "name": "forgero-spear-types",
   "resource_type": "PACKAGE",
   "priority": 4,
   "namespace": "forgero",
