--- a/fabric/build.gradle
+++ b/fabric/build.gradle
@@ -141,8 +141,10 @@ curseforge {
 				optionalDependency "dragonloot"
 				optionalDependency "garnished-additions"
 				optionalDependency "mythicmetals-decorations"
-				optionalDependency "regions-unexplored"
+				optionalDependency "eldritch-end"
+				optionalDependency "regions_unexplored"
 				optionalDependency "spelunkery"
+				optionalDependency "beneaththewetlands"
 				optionalDependency "enderite-mod"
 				optionalDependency "galosphere"
 				optionalDependency "eden-ring-reforked"
@@ -199,13 +201,14 @@ modrinth {
 		optional.project "garnished-additions"
 		optional.project "mythicmetals-decorations"
 		optional.project "eldritch-end"
-		optional.project "regions-unexplored"
+		optional.project "regions_unexplored"
 		optional.project "spelunkery"
 		optional.project "ends-phantasm"
 		optional.project "enderite-mod"
 		optional.project "galosphere"
 		optional.project "bountiful-fares"
 		optional.project "eden-ring-reforked"
+		optional.project "beneaththewetlands"
 		incompatible.project "exordium"
 	}
 }
