--- a/fabric/build.gradle
+++ b/fabric/build.gradle
@@ -142,7 +142,7 @@ curseforge {
 				optionalDependency "garnished-additions"
 				optionalDependency "mythicmetals-decorations"
 				optionalDependency "eldritch-end"
-				optionalDependency "regions_unexplored"
+				optionalDependency "regions-unexplored"
 				optionalDependency "spelunkery"
 				optionalDependency "beneath-the-wetlands"
 				optionalDependency "enderite-mod"
@@ -201,7 +201,7 @@ modrinth {
 		optional.project "garnished-additions"
 		optional.project "mythicmetals-decorations"
 		optional.project "eldritch-end"
-		optional.project "regions_unexplored"
+		optional.project "regions-unexplored"
 		optional.project "spelunkery"
 		optional.project "ends-phantasm"
 		optional.project "enderite-mod"
