* Added a trident module

--- a/fabric/forgero-fabric-compat/build.gradle
+++ b/fabric/forgero-fabric-compat/build.gradle
@@ -10,6 +10,8 @@ dependencies {
 	// Bows
 	localRuntime(project(path: ":fabric:modules:bows", configuration: 'namedElements'))
 
+	localRuntime(project(path: ":fabric:modules:tridents", configuration: 'namedElements'))
+
 	// Trade
 	localRuntime(project(path: ":fabric:modules:trade", configuration: 'namedElements'))
 
