--- a/settings.gradle
+++ b/settings.gradle
@@ -27,5 +27,6 @@ include "fabric:minecraft-common"
 // Modules
 include "fabric:modules"
 include "fabric:modules:bows"
+include "fabric:modules:tridents"
 include "fabric:modules:trade"
 include "fabric:modules:generator"
