--- a/fabric/forgero-fabric-core/build.gradle
+++ b/fabric/forgero-fabric-core/build.gradle
@@ -14,6 +14,8 @@ dependencies {
 	// Ref: https://github.com/SigmundGranaas/forgero/issues/933
 	localRuntime(project(path: ":fabric:modules:bows", configuration: 'namedElements'))
 
+	localRuntime(project(path: ":fabric:modules:crossbows", configuration: 'namedElements'))
+
 	// Trade
 	localRuntime(project(path: ":fabric:modules:trade", configuration: 'namedElements'))
 
