--- a/fabric/build.gradle
+++ b/fabric/build.gradle
@@ -3,20 +3,36 @@
 //file:noinspection DependencyNotationArgument
 
 plugins {
-	id "fabric-loom" version "${fabric_loom_version}"
+	id "architectury-plugin" version "${architectury_plugin_version}"
+	id "dev.architectury.loom" version "${architectury_loom_version}"
+	id "com.github.johnrengelman.shadow" version "${shadow_plugin_version}"
 	id "com.modrinth.minotaur" version "2.+"
 	id 'com.matthewprenger.cursegradle' version '1.4.0'
 }
 
 archivesBaseName = "${rootProject.mod_id}-fabric"
 
+architectury {
+	platformSetupLoomIde()
+	fabric()
+}
+
+loom {
+	accessWidenerPath = project(":common").loom.accessWidenerPath
+}
+
+configurations {
+	common
+	shadowCommon // Don't use shadow from the shadow plugin since it *excludes* files
+	compileClasspath.extendsFrom common
+	runtimeClasspath.extendsFrom common
+	developmentFabric.extendsFrom common
+}
+
 dependencies {
-	include(api(project(":common")))
-	dependencies {
-		project(":fabric:modules").subprojects.each { subproject ->
-			dependencies.add("include", project(path: ":fabric:modules:${subproject.name}"))
-		}
-	}
+	api(project(":core"))
+	common(project(path: ":common", configuration: "namedElements")) { transitive false }
+	shadowCommon(project(path: ":common", configuration: "transformProductionFabric")) { transitive false }
 
 	minecraft "com.mojang:minecraft:${rootProject.minecraft_version}"
 	mappings "net.fabricmc:yarn:${project.yarn_mappings}:v2"
@@ -30,10 +46,12 @@ dependencies {
 }
 
 subprojects {
-	apply plugin: "fabric-loom"
+	apply plugin: "architectury-plugin"
+	apply plugin: "dev.architectury.loom"
+	apply plugin: "com.github.johnrengelman.shadow"
 
 	dependencies {
-		api(project(":common"))
+		api(project(":fabric"))
 
 		minecraft "com.mojang:minecraft:${rootProject.minecraft_version}"
 		mappings "net.fabricmc:yarn:${project.yarn_mappings}:v2"
@@ -42,10 +60,17 @@ subprojects {
 		modImplementation "net.fabricmc:fabric-loader:${project.fabric_loader_version}"
 		// Fabric API
 		modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_api_version}"
+
+		implementation 'org.jetbrains:annotations:23.0.0'
+		testImplementation 'org.junit.jupiter:junit-jupiter:5.9.0'
 	}
 
 	processResources {
 		inputs.property "version", rootProject.version
+
+		from(project(":common").sourceSets["main"].resources) {
+			include("assets", "data", "resourcepacks")
+		}
 
 		filesMatching("fabric.mod.json") {
 			expand "version": project.version,
@@ -57,6 +82,14 @@ subprojects {
 				"java_version": rootProject.java_version,
 				"supported_minecraft_version": rootProject.supported_minecraft_version
 		}
+	}
+
+	test {
+		useJUnitPlatform()
+	}
+
+	java {
+		withSourcesJar()
 	}
 }
 
@@ -72,20 +105,48 @@ allprojects {
 	}
 }
 
-subprojects {
-	dependencies {
-		implementation 'org.jetbrains:annotations:23.0.0'
-		testImplementation 'org.junit.jupiter:junit-jupiter:5.9.0'
+processResources {
+	inputs.property "version", rootProject.version
+
+	from(project(":common").sourceSets["main"].resources) {
+		include("assets", "data", "resourcepacks", "${rootProject.mod_id}.accesswidener")
 	}
 
-	test {
-		useJUnitPlatform()
+	filesMatching("fabric.mod.json") {
+		expand "version": project.version,
+			"mod_id": rootProject.mod_id,
+			"mod_name": rootProject.mod_name,
+			"mod_description": project.mod_description,
+			"mod_license": rootProject.mod_license,
+			"fabric_loader_version": project.fabric_loader_version,
+			"java_version": rootProject.java_version,
+			"supported_minecraft_version": rootProject.supported_minecraft_version
 	}
+}
 
-	java {
-		withSourcesJar()
+shadowJar {
+	exclude "architectury.common.json"
+
+	configurations = [project.configurations.shadowCommon]
+	archiveClassifier = "dev-shadow"
+}
+
+remapJar {
+	injectAccessWidener = true
+	inputFile.set shadowJar.archiveFile
+	dependsOn shadowJar
+}
+
+sourcesJar {
+	def commonSources = project(":common").sourcesJar
+	dependsOn commonSources
+	from commonSources.archiveFile.map { zipTree(it) }
+}
+
+components.java {
+	withVariantsFromConfiguration(project.configurations.shadowRuntimeElements) {
+		skip()
 	}
-
 }
 
 curseforge {
