--- a/gradle.properties
+++ b/gradle.properties
@@ -14,7 +14,10 @@ release_type=release
 supported_minecraft_version=1.20.1
 
 # Multiloader properties
-fabric_loom_version=1.7-SNAPSHOT
+architectury_plugin_version=3.4-SNAPSHOT
+architectury_loom_version=1.7-SNAPSHOT
+shadow_plugin_version=7.1.2
 minecraft_version=1.20.1
 yarn_mappings=1.20.1+build.10
 java_version=17
+enabled_platforms=fabric,forge
