--- a/settings.gradle
+++ b/settings.gradle
@@ -5,6 +5,7 @@
 pluginManagement {
 	repositories {
 		maven { url "https://maven.fabricmc.net/" }
+		maven { url "https://maven.architectury.dev/" }
 		maven { url "https://maven.neoforged.net/releases/" }
 		gradlePluginPortal()
 	}
@@ -15,13 +16,13 @@ rootProject.name = "${mod_id}"
 // Core and common
 include("core")
 include("common")
+include("common:generator")
 
 // Fabric
-include "fabric"
-include "fabric:compat"
+include("fabric")
+include("fabric:compat")
 
 // Modules
-include "fabric:modules"
-include "fabric:modules:bows"
-include "fabric:modules:trade"
-include "fabric:modules:generator"
+include("fabric:modules")
+include("fabric:modules:bows")
+include("fabric:modules:trade")
