Changed to SIMPLE_WEAPON_TYPE

--- a/content/forgero-extended/src/main/resources/data/forgero/packs/forgero-simple_weapon-type/package.json
+++ b/content/forgero-extended/src/main/resources/data/forgero/packs/forgero-simple_weapon-type/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "forgero-spear-types",
+  "name": "forgero-simple_weapon-type",
   "resource_type": "PACKAGE",
   "priority": 4,
   "namespace": "forgero",
