fix: Add missing `compileClassPath` and `runtimeClassPath` additions for the `test` source set

--- a/mods/forgero/content/bows/bows-common/build.gradle
+++ b/mods/forgero/content/bows/bows-common/build.gradle
@@ -5,3 +5,10 @@
 architectury {
 	common(rootProject.enabled_platforms.split(","))
 }
+
+sourceSets {
+	test {
+		compileClasspath += main.compileClasspath
+		runtimeClasspath += main.runtimeClasspath
+	}
+}
