--- a/mods/generator/generator-common/build.gradle
+++ b/mods/generator/generator-common/build.gradle
@@ -7,6 +7,8 @@ architectury {
 }
 
 dependencies {
+	api(project(path: ":mods:abstractions:abstractions-common", configuration: "namedElements")) { transitive false }
+
 	// JUnit
 	testImplementation("org.junit.jupiter:junit-jupiter-api:5.9.0")
 	testRuntimeOnly("org.junit.jupiter:junit-jupiter-engine:5.9.0")
