--- a/gradle.properties
+++ b/gradle.properties
@@ -8,6 +8,7 @@ org.gradle.caching=true
 maven_group=com.sigmundgranaas
 mod_id=forgero
 mod_name=Forgero
+mod_description=A tool creation and customization mod!
 mod_license=MIT
 mod_version=0.12.7
 release_type=release
