--- a/gradle.properties
+++ b/gradle.properties
@@ -7,7 +7,7 @@ org.gradle.caching=true
 maven_group=com.sigmundgranaas
 mod_id=forgero
 mod_name=Forgero
-mod_version=0.12.7
+mod_version=0.13-RC-1
 release_type=release
 # Dependencies
 java_version=17
